--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   <div id="drop">ここに動画をドロップ</div>
   <progress id="bar" value="0" max="100" hidden></progress>
   <script type="module">
-    import { createFFmpeg, fetchFile } from "https://unpkg.com/@ffmpeg/ffmpeg@0.12.6/dist/ffmpeg.min.js";
+    import { createFFmpeg, fetchFile } from
+    "https://cdn.jsdelivr.net/npm/@ffmpeg/ffmpeg@0.12.6/dist/ffmpeg.min.js";
     const ffmpeg = createFFmpeg({ log: true });
     const drop = document.getElementById("drop");
     const bar  = document.getElementById("bar");
